--- a/views/base.html.twig
+++ b/views/base.html.twig
@@ -12,12 +12,11 @@
     {% block stylesheets %}{% endblock %}
 </head>
 <body>
-{% include "/partials/header.html.twig" %}
-
-{% block body %}{% endblock %}
-
-{% include "/partials/footer.html.twig" %}
-
+    <div class="d-flex flex-column min-vh-100">
+        {% include "/partials/header.html.twig" %}
+        {% block body %}{% endblock %}
+        {% include "/partials/footer.html.twig" %}
+    </div>
 {% block javascripts %}
 {% endblock %}
 </body>
