--- a/views/post/index.html.twig
+++ b/views/post/index.html.twig
@@ -2,11 +2,11 @@
 
 {% block body %}
 
-    <div class="container">
+    <div class="container flex-fill">
         <div class="row">
-            <div class="col-lg-8">
                 {% for post in posts %}
-                <div class="card my-4">
+            <div class="col-lg-4">
+                <div class="card mb-4">
 {#                    <img class="card-img-top" src="" alt="Card image cap">#}
                     <div class="card-body">
                         <h2 class="card-title">{{ post.title }}</h2>
@@ -22,8 +22,8 @@
                         </span>
                     </div>
                 </div>
-                {% endfor %}
             </div>
+                {% endfor %}
         </div>
     </div>
 
