--- a/views/post/show.html.twig
+++ b/views/post/show.html.twig
@@ -2,11 +2,10 @@
 
 {% block body %}
 
-    <div class="container">
-        <div class="row">
+    <div class="container flex-fill">
+        <div class="row justify-content-center">
             <div class="col-lg-8">
                     <div class="card my-4">
-                        {#                    <img class="card-img-top" src="" alt="Card image cap">#}
                         <div class="card-body">
                             <h2 class="card-title">{{ post.title }}</h2>
                             <p class="card-text">{{ post.chapo }}</p>
