feat(page): add user register

--- a/views/partials/header.html.twig
+++ b/views/partials/header.html.twig
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link py-0" href="/">Accueil <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/">Accueil <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link py-0" href="/posts">Posts <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/posts">Posts <span class="sr-only">(current)</span></a>
             </li>
         </ul>
         <ul class="navbar-nav ml-auto">
@@ -32,17 +32,17 @@
                             <div class="dropdown-divider"></div>
 
                         <a href="" class="dropdown-item">Mon compte</a>
-                        <a href="}" class="dropdown-item">Modifier mon profil</a>
+                        <a href="" class="dropdown-item">Modifier mon profil</a>
                         <div class="dropdown-divider"></div>
                         <a href="" class="dropdown-item">Déconnexion</a>
                     </div>
                 </li>
             {% else %}
                 <li class="nav-item">
-                    <a href="" class="nav-link">Inscription <i class="fa fa-sign-in"></i></a>
+                    <a href="/register" class="nav-link">Inscription &ensp;<i class="fas fa-sign-in-alt"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a href="" class="nav-link">Connexion <i class="fa fa-user"></i></a>
+                    <a href="" class="nav-link">Connexion &ensp;<i class="fa fa-user"></i></a>
                 </li>
             {% endif %}
         </ul>
