--- a/views/user/register.html.twig
+++ b/views/user/register.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Inscription{% endblock %}
+
 {% block body %}
     <div class="container flex-fill">
         {% if flashs.error or flashs.success %}
@@ -14,9 +16,9 @@
         </div>
         {% endif %}
         <h1>Inscription</h1>
-        <form class="needs-validation" action="/register" method="POST">
+        <form class="needs-validation mb-4" action="/register" method="POST">
             <div class="row">
-                <div class="col form-group form">
+                <div class="col-12 col-md-6 form-group">
                     <label for="InputEmail" class="form-label">Adresse email</label>
                     <input type="email" name="email"
                            class="form-control {% if flashs.success %}is-valid{% elseif flashs.error %}is-invalid{% endif %}"
@@ -30,7 +32,7 @@
                     <small id="emailHelp" class="form-text text-muted">Nous ne partagerons jamais votre e-mail avec une
                         autre personne.</small>
                 </div>
-                <div class="col form-group">
+                <div class="col-12 col-md-6 form-group">
                     <label for="InputPassword" class="form-label">Mot de passe</label>
                     <input type="password" name="password" class="form-control" id="InputPassword" required>
                     <div class="invalid-feedback">
@@ -41,19 +43,23 @@
                     </div>
                 </div>
             </div>
-            <div class="form-group">
-                <div class="form-check">
+            <div class="row">
+                <div class="col form-group">
+                    <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="invalidCheck" required>
                     <label class="form-check-label" for="invalidCheck">
                         En utilisant ce formulaire, vous acceptez le stockage et le traitement de vos données par ce
                         site Web.
                     </label>
+                    </div>
                     <div class="invalid-feedback">
                         Vous devez nous donner votre consentement afin de traiter vos données.
                     </div>
                 </div>
             </div>
-            <button type="submit" class="btn btn-primary">Inscription</button>
+            <div class="text-md-left text-center">
+                <button type="submit" class="btn btn-primary">Inscription</button>
+            </div>
         </form>
     </div>
 {% endblock %}
