feat(back-office): add update and delete query for posts - some php doc - refacto

--- a/views/partials/footer.html.twig
+++ b/views/partials/footer.html.twig
@@ -1,5 +1,10 @@
-<footer class="text-center bg-primary py-3" style="color:white;">
-    <div>© 2021 Copyright:
-        <a class="text-secondary" href="https://alexandrecavanna.fr/"> Alexandre Cavanna</a>
+<footer class="container-fluid text-light text-center bg-primary py-3">
+    <div class="row align-items-center">
+        <div class="col">
+            © 2021 Copyright: <a class="text-secondary" href="https://alexandrecavanna.fr/"> Alexandre Cavanna</a>
+        </div>
+        <div class="col">
+            <a class="btn btn-primary" href="/admin">Espace d'administration</a>
+        </div>
     </div>
 </footer>
