--- a/views/error/error.html.twig
+++ b/views/error/error.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Erreur {{ statusCode }}{% endblock %}
+
 {% block body %}
     <div class="container d-flex justify-content-center align-items-center flex-fill">
         <div class="row row-cols-1-md align-items-center justify-content-center">
