--- a/views/post/show.html.twig
+++ b/views/post/show.html.twig
@@ -1,36 +1,53 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
+{% block title %}Post: {{ post.title }}{% endblock %}
 
+{% block body %}
     <div class="container flex-fill">
         <div class="row justify-content-center">
             <div class="col-lg-8">
                     <div class="card my-4">
                         <div class="card-body">
                             <h2 class="card-title">{{ post.title }}</h2>
-                            <p class="card-text">{{ post.chapo }}</p>
-                            <p class="card-text">{{ post.content }}</p>
-                            <p class="card-text">{{ post.author }}</p>
+                            <p class="card-text" style="font-style: italic;">{{ post.chapo|raw  }}</p>
+                            <p class="card-text">{{ post.content|raw }}</p>
+                            <p class="card-text" style="font-weight: bold;">{{ post.author }}</p>
                             <a href="/posts" class="btn btn-primary">Retour à la liste des articles &rarr;</a>
                         </div>
                         <div class="card-footer text-muted">
                         <span class="float-right">
                             {{ post.modify_At is empty
-                            ? 'Publié le ' ~ post.created_At|date("m/d/Y à H\\hi")
-                            : 'Modifié le ' ~ post.modify_At|date("m/d/Y à H\\hi")
+                            ? 'Publié le ' ~ post.created_At|date("d/m/Y à H\\hi")
+                            : 'Modifié le ' ~ post.modify_At|date("d/m/Y à H\\hi")
                             }}
                         </span>
                         </div>
                     </div>
+                    {% for comment in comments %}
+                        {% if comment.status is same as 'Approuvé'%}
+                            <div class="card my-4">
+                                <label class="card-header card-header-sm" for="commentForm">Commentaire #{{ comment.id }}</label>
+                                <div class="card-body card-body-sm">
+                                    {{ comment.content }}
+                                    <a class="btn btn-danger float-right" href="/comment/{{ comment.id }}/report">Signaler</a>
+                                </div>
+                                <div class="card-footer">
+                                    <span class="float-right">
+                                    {{ comment.modify_At is empty
+                                    ? 'Publié le ' ~ comment.created_At|date("d/m/Y à H\\hi")
+                                    : 'Modifié le ' ~ comment.modify_At|date("d/m/Y à H\\hi")
+                                    }}
+                                    </span>
+                                </div>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
                 <div class="card my-4">
                     <label class="card-header card-header-sm" for="commentForm"><i class="fas fa-comment"></i> Laisser un commentaire :</label>
                     <div class="card-body card-body-sm">
-                        <form action="/post/{{ post.id }}/new-comment" method="post">
+                        <form action="/post/{{ post.id }}" method="post">
                             <div class="form-group">
-                                <textarea class="form-control {% if session['checkPostComment'] %}is-invalid{% endif %}" rows="5" name="content" id="commentForm"></textarea>
-                                <div class="invalid-feedback">
-                                    {{ session['checkPostComment'] }}
-                                </div>
+                                <textarea class="form-control" rows="5" name="content" id="commentForm" required></textarea>
                             </div>
                             <button type="submit" class="btn btn-primary">Envoyer</button>
                         </form>
@@ -42,5 +59,4 @@
             </div>
         </div>
     </div>
-
 {% endblock %}
