--- a/views/admin/index.html.twig
+++ b/views/admin/index.html.twig
@@ -25,7 +25,7 @@
                        aria-controls="v-pills-home" aria-selected="true">Gérer les Posts</a>
                     <a class="nav-link" id="v-pills-commentReported-tab" data-toggle="pill" href="#v-pills-commentReported" role="tab"
                        aria-controls="v-pills-commentReported" aria-selected="false">Commentaires signalés {% if countReported != 0 %}<span class="badge badge-primary">{{ countReported }}</span>{% endif %}</a>
-                    <a class="nav-link" id="v-pills-commentPendingReview-tab" data-toggle="pill" href="#v-pills-commentPendingReview" role="tab"
+                    <a class="nav-link mb-4" id="v-pills-commentPendingReview-tab" data-toggle="pill" href="#v-pills-commentPendingReview" role="tab"
                        aria-controls="v-pills-commentReported" aria-selected="false">Commentaires besoin validation {% if countReview != 0 %}<span class="badge badge-primary">{{ countReview }}</span>{% endif %}</a>
                 </div>
             </div>
