--- a/views/layout/managePosts.html.twig
+++ b/views/layout/managePosts.html.twig
@@ -1,12 +1,17 @@
 <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel"
      aria-labelledby="v-pills-home-tab">
     <div class="row">
+        <div class="col-12">
+            <a class="btn btn-block btn-success mb-4" href="/admin/post/new">Créer un post</a>
+        </div>
+    </div>
+    <div class="row">
         {% for post in posts %}
             <div class="col-12 col-md-6 col-lg-4">
                 <div class="card mb-4">
                     <div class="card-body">
                         <h2 class="card-title">{{ post.title }}</h2>
-                        <p class="card-text">{{ post.chapo|raw }}</p>
+                        <p class="card-text" style="font-style: italic;">{{ post.chapo|raw }}</p>
                         <a href="/post/{{ post.id }}" class="btn btn-primary">Voir</a>
                         <a href="admin/post/{{ post.id }}/edit" class="btn btn-success">Editer</a>
                         <button class="btn btn-danger" data-toggle="modal" data-target="#deleteModalPost{{ post.id }}">Supprimer</button>
@@ -32,7 +37,7 @@
                         <hr>
                         {% set needReview = 0 %}
                         {% for comment in comments %}
-                            {% if comment.post_id == post.id and comment.status != 'Approuvé'%}
+                            {% if comment.postId == post.id and comment.status != 'Approuvé'%}
                                 {% set needReview = needReview + 1 %}
                             {% endif %}
                         {% endfor %}
@@ -44,13 +49,20 @@
                     </div>
                     <div class="card-footer text-muted">
                         <span class="float-right">
-                            {{ post.modify_At is empty
-                            ? 'Publié le ' ~ post.created_At|date("d/m/Y à H\\hi")
-                            : 'Modifié le ' ~ post.modify_At|date("d/m/Y à H\\hi") }}
+                            {{ post.modifyAt is empty
+                            ? 'Publié le ' ~ post.createdAt|date("d/m/Y à H\\hi")
+                            : 'Modifié le ' ~ post.modifyAt|date("d/m/Y à H\\hi") }}
                         </span>
                     </div>
                 </div>
             </div>
         {% endfor %}
+        {% if posts is empty %}
+            <div class="col-12 text-center">
+                <div class="alert alert-warning">
+                    <strong>Attention :</strong> Aucun post(s), n'a été encore publié(s).
+                </div>
+            </div>
+        {% endif %}
     </div>
 </div>
